--- a/documents/Rapport/contexte.tex
+++ b/documents/Rapport/contexte.tex
@@ -18,11 +18,11 @@ Les travaux scientifiques sont menés au sein de 28 équipes structurées en 5 d
 
 \section{Équipe ORPAILLEUR}
 
-Le stage s'est déroulé au sein de l'équipe ORPAILLEUR et plus précisément en collaboration direct avec Miguel Couceiro, Alain Gély et Amedeo Napoli qui la dirige. Elle fait partie du 4\up{ème} département « Traitement automatique des langues et des connaissances ». 
+Le stage s'est déroulé au sein de l'équipe ORPAILLEUR et plus précisément en collaboration directe avec Miguel Couceiro, Alain Gély et Amedeo Napoli qui la dirige. Elle fait partie du 4\up{ème} département « Traitement automatique des langues et des connaissances ». 
 
 \bigbreak
 
-Le domaine de recherche de l'équipe est l'exploration de connaissances dans les bases de données (knowledge discovery in databases). Cela consiste à traiter des données afin d'en resortir des unités de connaissances utiles et réutilisables. Le processus se fait en trois mécanismes principaux : la préparation des données, leur exploitation et l'interprétation des unités extraites en unité de connaissance.
+Le domaine de recherche de l'équipe est l'exploration de connaissances dans les bases de données (knowledge discovery in databases). Cela consiste à traiter des données afin d'en ressortir des unités de connaissances utiles et réutilisables. Le processus se fait en trois mécanismes principaux : la préparation des données, leur exploitation et l'interprétation des unités extraites en unité de connaissance.
 
 \bigbreak
 
