--- a/documents/Rapport/main.tex
+++ b/documents/Rapport/main.tex
@@ -105,7 +105,7 @@ pdfstartview={FitH}}					% ajuste la page à la largueur de l'écran
 
 \input{./motivations.tex}
 
-\input{./notations.tex}
+\input{./notions.tex}
 
 \input{./contribution.tex}
 
