--- a/documents/Rapport/motivations.tex
+++ b/documents/Rapport/motivations.tex
@@ -4,7 +4,7 @@ Il est important avant de commencer cette section de préciser le détails des d
 
 \section{Phylogénie}
 
-La plylogénie est un domaine de la biologie ayant pour but l'étude des relations de parenté entre les êtres vivants. Nous nous concentrerons sur la partie du domaine qui traite des relations entre les espèces et leurs évolutions. Pour représenter les informations, on utilise des arbres montrant les différentes espèces avec leurs caractèrisques communes comme le montre l'exemple de la figure \ref{arbre_phylogenie} sur laquelle chaque feuille, ici représentée en noir, correspond à une espèce actuelle. Sa lecture est très simple, on part du n\oe ud le plus haut qui correspond à l'intégralité des espèces et on descend progressivement chaque ramification qui vient séléctionner une partie des espèces suivant certaines caractéristiques. On part également du principe que chaque n\oe ud correspond à un ancêtre commun à toutes les espèces des feuilles sur lesquelles ce n\oe ud débouche.
+La phylogénie est un domaine de la biologie ayant pour but l'étude des relations de parenté entre les êtres vivants. Nous nous concentrerons sur la partie du domaine qui traite des relations entre les espèces et leurs évolutions. Pour représenter les informations, on utilise des arbres montrant les différentes espèces avec leurs caractérisques communes comme en figure \ref{arbre_phylogenie} sur laquelle chaque feuille, ici représentée en noir, correspond à une espèce actuelle. Sa lecture est très simple, on part du n\oe ud le plus haut qui correspond à l'intégralité des espèces et on descend progressivement chaque ramification qui vient sélectionner une partie des espèces suivant certaines caractéristiques. On part également du principe que chaque n\oe ud correspond à un ancêtre commun à toutes les espèces des feuilles sur lesquelles ce n\oe ud débouche.
 
 \begin{figure}[H]
 	\begin{center}
@@ -182,7 +182,7 @@ Pour arriver à ce résultat, U. Priss expose une méthode consistant à rendre 
 	\begin{minipage}[c]{0.5 \textwidth}
 	\begin{center}
 		\begin{tikzpicture}
-			\node [wnode, label=left:{$1$}] (1) at (-2, 4) {};
+			\node [wnode, label=left:{$1$}] (1) at (-2, 0) {};
 			\node [wnode, label=right:{$2$}] (2) at (0, 0) {};
 			\node [wnode, label=left:{$3$}] (3) at (-1, 1) {};
 			\node [wnode, label=right:{$4$}] (4) at (1, 1) {};
